k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nll-scheduler
  labels:
    app.kubernetes.io/part-of: nll-scheduler
